<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:context="com.example.android.rogerquiz.MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/question_1"
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quest_1" />

        <CheckBox
            android:id="@+id/answer_q_1_cb_1"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_1_q_1" />

        <CheckBox
            android:id="@+id/answer_q_1_cb_2"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_2_q_1" />

        <CheckBox
            android:id="@+id/answer_q_1_cb_3"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_3_q_1" />

        <CheckBox
            android:id="@+id/answer_q_1_cb_4"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_4_q_1" />

        <TextView
            android:id="@+id/question_2"
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quest_2" />

        <RadioGroup
            android:id="@+id/answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_q_2_rb_1"
                style="@style/Answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answer_1_q_2" />

            <RadioButton
                android:id="@+id/answer_q_2_rb_2"
                style="@style/Answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answer_2_q_2" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_3"
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quest_3" />

        <EditText
            android:id="@+id/slam_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nb_slam" />

        <TextView
            android:id="@+id/question_4"
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quest_4" />

        <RadioGroup
            android:id="@+id/answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_q_4_rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_q_4" />

            <RadioButton
                android:id="@+id/answer_q_4_rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_q_4" />

        </RadioGroup>

        <TextView
            android:id="@+id/question_5"
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quest_5" />

        <RadioGroup
            android:id="@+id/answer_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_q_5_rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_q_5" />

            <RadioButton
                android:id="@+id/answer_q_5_rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_q_5" />

            <RadioButton
                android:id="@+id/answer_q_5_rb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_q_5" />

        </RadioGroup>


        <Button
            android:id="@+id/end_test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:onClick="endTest"
            android:text="@string/end_test" />

        <TextView
            android:id="@+id/test_result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="16dp"
            android:text=" "
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>

